--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-lg-9 col-xl-6">
             <h1 class="mt-sm-3 mb-sm-4 f-w-600 wow fadeInUp" data-wow-delay="0.2s"
-              >Welcome To RP karongi <span class="text-primary">Trip Log Data base</span></h1
+              > RP karongi <span class="text-primary">Trip Log Data base</span></h1
             >
             <h4 class="mb-sm-4 text-muted wow fadeInUp" data-wow-delay="0.4s"
-              >Berry is React based admin template which helps you to build faster and beautiful web applications.</h4
+              >this project is to create a database that will be used to manage and organize the records of the driver trip information.</h4
             >
             <div class="my-3 my-xl-5 wow fadeInUp" data-wow-delay="0.6s">
               <a href="dashboard/index.html" class="btn btn-secondary me-2">Join Now</a>
