--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               >this project is to create a database that will be used to manage and organize the records of the driver trip information.</h4
             >
             <div class="my-3 my-xl-5 wow fadeInUp" data-wow-delay="0.6s">
-              <a href="dashboard/index.html" class="btn btn-secondary me-2">Join Now</a>
+              <a href="./pages/register-v3.php" class="btn btn-secondary me-2">Join Now</a>
               <a href="https://codedthemes.com/item/berry-bootstrap-5-admin-template/" class="btn btn-link-primary" target="_blank"
                 >Purchase Now</a
               >
