added connection and modified admin dashboard

--- a/pages/register-v3 copy.html
+++ b/pages/register-v3 copy.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <!-- [ Pre-loader ] End -->
-
+   <!-- <a href="../dashboard/index.html"></a> -->
     <div class="auth-main">
       <div class="auth-wrapper v3">
         <div class="auth-form">
