--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             >
             <div class="my-3 my-xl-5 wow fadeInUp" data-wow-delay="0.6s">
               <a href="./pages/register-v3.php" class="btn btn-secondary me-2">Join Now</a>
-              <a href="https://codedthemes.com/item/berry-bootstrap-5-admin-template/" class="btn btn-link-primary" target="_blank"
-                >Purchase Now</a
+              <a href="./pages/login-v3.php" class="btn btn-link-primary" target="_blank"
+                >Login Now</a
               >
             </div>
           </div>
