--- a/index.html
+++ b/index.html
@@ -70,9 +70,6 @@
               <a class="nav-link text-dark active" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-dark" href="dashboard/index.html">Dashboard</a>
-            </li>
-            <li class="nav-item">
               <a class="btn btn-secondary" target="_blank" href="./pages/register-v3.html"
                 >Join Now</a
               >
@@ -88,7 +85,7 @@
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-lg-9 col-xl-6">
             <h1 class="mt-sm-3 mb-sm-4 f-w-600 wow fadeInUp" data-wow-delay="0.2s"
-              > RP karongi <span class="text-primary">Trip Log Data base</span></h1
+              > Driver Trip <span class="text-primary"> Log Data System</span></h1
             >
             <h4 class="mb-sm-4 text-muted wow fadeInUp" data-wow-delay="0.4s"
               >this project is to create a database that will be used to manage and organize the records of the driver trip information.</h4
