added logo and delete php for driver

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="codedthemes" />
 
     <!-- [Favicon] icon -->
-    <link rel="icon" href="assets/images/favicon.svg" type="image/x-icon" />
+    <link rel="icon" href="./assets/images/bus.png" type="image/x-icon" />
     <!-- [Page specific CSS] start -->
     <link href="assets/css/plugins/animate.min.css" rel="stylesheet" type="text/css" />
     <!-- [Page specific CSS] end -->
@@ -51,7 +51,7 @@
     <nav class="navbar navbar-expand-md navbar-light default">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="assets/images/logo-dark.svg" alt="logo" class="img-fluid" />
+          <img src="./assets/images/bus.png" alt="" class="logo " height="50px"  width="50px"/> <b>Driver Trip</b> 
         </a>
         <button
           class="navbar-toggler"
@@ -70,7 +70,7 @@
               <a class="nav-link text-dark active" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-secondary" target="_blank" href="./pages/register-v3.html"
+              <a class="btn btn-secondary" target="_blank" href="./pages/register-v3.php"
                 >Join Now</a
               >
             </li>
@@ -102,6 +102,13 @@
     </header>
     <!-- [ Header ] End -->
     <!-- [ Main Content ] end -->
+    <footer class=" d-flex justify-content-center">
+            <p class="">
+              Berry &#9829; developed  by Team
+              <a href="" target="_blank">Ebedi</a>
+            </p>
+       
+    </footer>
     <!-- Required Js -->
     <script src="assets/js/plugins/popper.min.js"></script>
     <script src="assets/js/plugins/simplebar.min.js"></script>
