--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <footer class=" d-flex justify-content-center">
             <p class="">
               Berry &#9829; developed  by Team
-              <a href="" target="_blank">Ebedi</a>
+              <a href="https://isonic0788.github.io/myProject_one/" target="_blank">Ebedi</a>
             </p>
        
     </footer>
